--- a/angular.json
+++ b/angular.json
@@ -25,7 +25,9 @@
             "styles": [
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": ["node_modules/jquery/dist/jquery.min.js",
+            "node_modules/popper.js/dist/umd/popper.min.js",
+          "node_modules/bootstrap/dist/js/bootstrap.min.js", "src/scripts.ts"]
           },
           "configurations": {
             "production": {
@@ -74,7 +76,9 @@
             "styles": [
               "src/styles.css"
             ],
-            "scripts": [],
+            "scripts": [
+              "src/scripts.ts"
+            ],
             "assets": [
               "src/favicon.ico",
               "src/assets"
